tests/cases/negative/scope/dupDefs1.lam
-- duplicate type signatures

t : Nat
t : Nat
